<resources>
    <string name="app_name">InventoryApp</string>
    <string name="inventory_text">Inventory</string>
    <string name="how_much_inventory">¿Cuánto tengo de inventario?</string>
    <string name="hidden_inventory_value">💲 ****</string> <string name="manage_inventory_button_text">Gestionar Inventario</string>
    <string name="content_description_app_logo">Logo de la aplicación de inventario</string>
    <string name="content_description_toggle_visibility">Alternar visibilidad del inventario</string>
    <string name="content_description_settings">Ajustes del widget</string>
    <string name="app_widget_description">Widget para ver y gestionar tu inventario rápidamente.</string>
    <string name="inventario_logo">Inventario Logo</string>
    <string name="inventario_general">Inventario General</string>
    <string name="ajustes_de_inventario">Ajustes de Inventario</string>
    <string name="valor_de_inventario">Valor de Inventario:</string>
    <string name="alternar_visibilidad_del_inventario">Alternar visibilidad del inventario</string>
    <string name="gestionar_inventario">Gestionar Inventario</string>
</resources>